Anno Viewer: Fix actions toolbar spacing

--- a/src/components/anno-viewer/anno-viewer.scss
+++ b/src/components/anno-viewer/anno-viewer.scss
@@ -18,9 +18,15 @@
   .btn-toolbar {
     .btn-group {
       margin-top: 0.5ex;
-    }
 
-    margin-bottom: 0.5ex;
+      .btn-group {
+        margin-top: 0;
+      }
+
+      .btn {
+        margin-bottom: 0.5ex;
+      }
+    }
   }
 
   .anno-editor-anno-body-buttonbar-top {
