--- a/src/components/sidebar-app/bootstrap-tweaks.scss
+++ b/src/components/sidebar-app/bootstrap-tweaks.scss
@@ -8,6 +8,8 @@
     color: mistyrose;
   }
 
+  .btn-outline-danger, .btn-danger { z-index: 8; }
+
   .btn-toolbar.pull-right {
     justify-content: flex-end;
 
